# js-midi

./: Cargo.toml
data/: evdev_js.sample
egui_examples/: Cargo.toml
egui_examples/src/: bevy_example.rs  interactive.rs
midi_evdev_gui/: Cargo.toml
midi_evdev_gui/src/: main.rs  main2.rs  midi_utils.rs
src/: evdev_js.rs  joystick.rs  main.rs  main2.rs  midi_utils.rs  sdl_js.rs
src/egui_examples/: bevy.rs  test_egui_graph.rs
src/ui/: mod.rs
